# AtariSkiingFlashback

./: CMakeLists.txt  MainWindow.ui  README.md  main.cpp
src/: CMakeLists.txt  main.cpp
src/Player/: IPlayer.cpp  IPlayer.h  Player.cpp  Player.h
